--- a/language/english/help/help.html
+++ b/language/english/help/help.html
@@ -1,14 +1,14 @@
 <div id="help-template" class="outer">
     <h1 class="head">Help：
         <a class="ui-corner-all tooltip" href="<{$xoops_url}>/modules/tad_tv/admin/index.php"
-           title="Go back to the module management homepage"> Online TV
+           title="Go back to the module management homepage"> Internet TV
             <img src="<{xoAdminIcons home.png}>" alt="Go back to the module management homepage"/>
         </a></h1>
     <!-- -----Help Content ---------- -->
 
     <h4 class="odd">DESCRIPTION</h4>
     <p class="even">
-        This module is an Online TV
+        This module is an Internet TV
     </p>
 
     <h4 class="odd">INSTALL/UNINSTALL</h4>
