--- a/language/english/help/help.html
+++ b/language/english/help/help.html
@@ -2,7 +2,7 @@
     <h1 class="head">Help：
         <a class="ui-corner-all tooltip" href="<{$xoops_url}>/modules/tad_tv/admin/index.php"
            title="Go back to the module management homepage"> Internet TV
-            <img src="<{xoAdminIcons home.png}>" alt="Go back to the module management homepage"/>
+            <img src="<{xoAdminIcons home.png}>" alt="Go back to the module management homepage">
         </a></h1>
     <!-- -----Help Content ---------- -->
 
